--- a/index.html
+++ b/index.html
@@ -63,7 +63,88 @@
            </div>
      </section>
 
+     <!-- Professional Hockeys Club section -->
+     <section id="hockeyClubSection" class="text-center">
+          <hr class="mb-8">
+           <h2 class="text-3xl font-semibold">Professional Hockeys Club</h2>
+           <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+           <hr class="mt-8">
+           <div class="flex sm:flex-row flex-col gap-4 items-center py-6">
+               <!-- number one skill progress -->
+               <div>
+                    <div class="radial-progress" style="--value:87;color: tomato;" role="progressbar">87%</div>
+                    <div>
+                          <h2>Prayer Facility</h2>
+                          <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+               </div>
+               <!-- num two skill progress -->
+                <div>
+                    <div class="radial-progress text-primary" style="--value:95;color: #0a920a;" role="progressbar">95%</div>
+                    <div>
+                          <h2>Experienced Coach</h2>
+                          <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+                </div>
+               <!-- number three skill progress -->
+                <div>
+                    <div class="radial-progress" style="--value:90;color: rgb(149, 119, 10);" role="progressbar">90%</div>
+                    <div>
+                         <h2>Senior Player</h2>
+                         <p>Amet consectetur. Condimentum dignissim adipiscing.</p>
+                   </div>
+                </div>
+              <!-- skill num 4 progress -->
+               <div>
+                    <div class="radial-progress text-primary" style="--value:80;color: #1a0a92;" role="progressbar">80%</div>
+     
+                    <div>
+                         <h2>Training Ground</h2>
+                         <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                    </div>
+               </div>
+           </div>
+           <hr class="mt-8">
+     </section>
 
+     <!-- program section -->
+
+     <section class="text-center">
+
+          <h2 class="text-3xl font-bold my-8">Professional Hockeys Club</h2>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+          <hr class="my-12">
+          <!-- row number 1 about hocker clubs -->
+          <div class="flex flex-col sm:flex-row gap-4 items-center text-left text-white">
+               <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/2.png') no-repeat center / 100%;" class="p-5 pt-10 rounded-md">
+                    <h2 class="font-semibold text-2xl">Junior Program</h2>
+                    <p class="my-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                         enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                         <button class="btn btn-primary">Register Now</button>
+               </div>
+               <div>
+                    <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/3.png') no-repeat center / 100%;" class="p-5 pt-10 rounded-md">
+                         <h2 class="font-semibold text-2xl" >Teenager Program</h2>
+                         <p class="my-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                              <button class="btn btn-primary">Register Now</button>
+                    </div>
+               </div>
+          </div>
+
+          <!-- row two -->
+          <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/4.png') no-repeat;background-size: 100% 100%;"class="h-[350px] text-left text-white  roundd-lg my-4">
+
+               <div class="p-5 rounded-md h-full flex flex-col justify-end w-full sm:w-2/5">
+                    <h2 class="font-semibold text-2xl">Junior Program</h2>
+                    <p class="my-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                         enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                         <button style="width:150px !important" class="btn btn-primary  px-2">Register Now</button>
+               </div>
+          </div>
+          
+          <hr class="mt-12">
+     </section>
 
      <!-- DaisyUi js cdn -->
      <script src="https://cdn.tailwindcss.com"></script>
