product section Done

--- a/index.html
+++ b/index.html
@@ -114,16 +114,17 @@
           <h2 class="text-3xl font-bold my-8">Professional Hockeys Club</h2>
           <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
           <hr class="my-12">
+
           <!-- row number 1 about hocker clubs -->
           <div class="flex flex-col sm:flex-row gap-4 items-center text-left text-white">
-               <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/2.png') no-repeat center / 100%;" class="p-5 pt-10 rounded-md">
+               <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/2.png');background-size: 100% / 100%;" class="p-5 pt-10 rounded-lg">
                     <h2 class="font-semibold text-2xl">Junior Program</h2>
                     <p class="my-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                          enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
                          <button class="btn btn-primary">Register Now</button>
                </div>
                <div>
-                    <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/3.png') no-repeat center / 100%;" class="p-5 pt-10 rounded-md">
+                    <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/3.png');background-size: 100% / 100%;" class="p-5 pt-10 rounded-lg">
                          <h2 class="font-semibold text-2xl" >Teenager Program</h2>
                          <p class="my-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                               enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -133,7 +134,7 @@
           </div>
 
           <!-- row two -->
-          <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/4.png') no-repeat;background-size: 100% 100%;"class="h-[350px] text-left text-white  roundd-lg my-4">
+          <div style="background: linear-gradient(#0b01017a,#0b01017a),url('./Images/4.png') no-repeat;background-size: 100% 100%;border-radius: 0.5rem;"class="h-[350px] text-left text-white my-4">
 
                <div class="p-5 rounded-md h-full flex flex-col justify-end w-full sm:w-2/5">
                     <h2 class="font-semibold text-2xl">Junior Program</h2>
@@ -143,8 +144,130 @@
                </div>
           </div>
           
-          <hr class="mt-12">
+          <hr class="mt-20">
      </section>
+
+     <!-- Our New Products section -->
+     <section id="newProductsSection" class="text-center">
+
+          <h2 class="text-3xl font-bold mb-3">Our New Products</h2>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin.  </p>
+          <hr class="my-8">
+
+          <!-- products part -->
+           <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+               
+                <div style="border: 1px solid #231c1c77" class="flex flex-col sm:flex-row gap-3 px-4 sm:py-4 py-7 rounded-lg text-left">
+                    <img src="./Images/5.png" alt="">
+                    <div>
+                         <div class="flex items-center gap-2">
+                              <i class="fa-solid fa-star text-orange-600"></i>
+                              <span>5.0</span>
+                              <i class="fa-solid fa-eye ml-4"></i>
+                              <span>20</span>
+                              <i class="fa-regular fa-heart ml-4"></i>
+                              <span>200</span>
+                         </div>
+                         <h2 class="text-2xl font-semibold my-1">World Cup Flags Football</h2>
+                         <p class="my-2">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                              <span class="text-red-500 font-semibold ">Price - $22.00</span>
+                              <span class="text-gray-500 ml-0 sm:ml-3 block sm:inline-block"> <i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</span>
+                    </div>
+                </div>
+                <!-- product Num 2 -->
+                 <div style="border: 1px solid #231c1c77" class="flex flex-col sm:flex-row gap-3 px-4 py-7 rounded-lg text-left">
+                    <img src="./Images/6.png" alt="">
+                    <div>
+                         <div class="flex items-center gap-2">
+                              <i class="fa-solid fa-star text-orange-600"></i>
+                              <span>5.0</span>
+                              <i class="fa-solid fa-eye ml-4"></i>
+                              <span>20</span>
+                              <i class="fa-regular fa-heart ml-4"></i>
+                              <span>200</span>
+                         </div>
+                         <h2 class="text-2xl font-semibold my-1">World Cup Flags Football</h2>
+                         <p class="my-2">Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
+                              <span class="text-red-500 font-semibold ">Price - $22.00</span>
+                              <span class="text-gray-500 ml-0 sm:ml-3 block sm:inline-block"> <i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</span>
+                    </div>
+                </div>
+                <!-- product Num = 3 -->
+                 <div style="border: 1px solid #231c1c77" class="flex flex-col sm:flex-row gap-3 px-4 sm:py-4 py-7 rounded-lg text-left">
+                    <img src="./Images/7.png" alt="">
+                    <div>
+                         <div class="flex items-center gap-2">
+                              <i class="fa-solid fa-star text-orange-600"></i>
+                              <span>5.0</span>
+                              <i class="fa-solid fa-eye ml-4"></i>
+                              <span>20</span>
+                              <i class="fa-regular fa-heart ml-4"></i>
+                              <span>200</span>
+                         </div>
+                         <h2 class="text-2xl font-semibold my-1">World Cup Flags Football</h2>
+                         <p class="my-2">Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
+                              <span class="text-red-500 font-semibold ">Price - $22.00</span>
+                              <span class="text-gray-500 ml-0 sm:ml-3 block sm:inline-block"> <i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</span>
+                    </div>
+                </div>
+                 <!-- product Num = 4 -->
+                 <div style="border: 1px solid #231c1c77" class="flex flex-col sm:flex-row gap-3 px-4 sm:py-4 py-7 rounded-lg text-left">
+                    <img src="./Images/8.png" alt="">
+                    <div>
+                         <div class="flex items-center gap-2">
+                              <i class="fa-solid fa-star text-orange-600"></i>
+                              <span>5.0</span>
+                              <i class="fa-solid fa-eye ml-4"></i>
+                              <span>20</span>
+                              <i class="fa-regular fa-heart ml-4"></i>
+                              <span>200</span>
+                         </div>
+                         <h2 class="text-2xl font-semibold my-1">World Cup Flags Football</h2>
+                         <p class="my-2">Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
+                              <span class="text-red-500 font-semibold ">Price - $22.00</span>
+                              <span class="text-gray-500 ml-0 sm:ml-3 block sm:inline-block"> <i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</span>
+                    </div>
+                </div>
+                 <!-- product Num = 5 -->
+                 <div style="border: 1px solid #231c1c77" class="flex flex-col sm:flex-row gap-3 px-4 sm:py-4 py-7 rounded-lg text-left">
+                    <img src="./Images/9.png" alt="">
+                    <div>
+                         <div class="flex items-center gap-2">
+                              <i class="fa-solid fa-star text-orange-600"></i>
+                              <span>5.0</span>
+                              <i class="fa-solid fa-eye ml-4"></i>
+                              <span>20</span>
+                              <i class="fa-regular fa-heart ml-4"></i>
+                              <span>200</span>
+                         </div>
+                         <h2 class="text-2xl font-semibold my-1">World Cup Flags Football</h2>
+                         <p class="my-2">Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
+                              <span class="text-red-500 font-semibold ">Price - $22.00</span>
+                              <span class="text-gray-500 ml-0 sm:ml-3 block sm:inline-block"> <i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</span>
+                    </div>
+                </div>
+                 <!-- product Num = 6 -->
+                 <div style="border: 1px solid #231c1c77" class="flex flex-col sm:flex-row gap-3 px-4 sm:py-4 py-7 rounded-lg text-left">
+                    <img src="./Images/10.png" alt="">
+                    <div>
+                         <div class="flex items-center gap-2">
+                              <i class="fa-solid fa-star text-orange-600"></i>
+                              <span>5.0</span>
+                              <i class="fa-solid fa-eye ml-4"></i>
+                              <span>20</span>
+                              <i class="fa-regular fa-heart ml-4"></i>
+                              <span>200</span>
+                         </div>
+                         <h2 class="text-2xl font-semibold my-1">World Cup Flags Football</h2>
+                         <p class="my-2">Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
+                              <span class="text-red-500 font-semibold ">Price - $22.00</span>
+                              <span class="text-gray-500 ml-0 sm:ml-3 block sm:inline-block"> <i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</span>
+                    </div>
+                </div>
+
+           </div>
+
+     </section>   
 
      <!-- DaisyUi js cdn -->
      <script src="https://cdn.tailwindcss.com"></script>
