--- a/index.html
+++ b/index.html
@@ -269,6 +269,74 @@
 
      </section>   
 
+      <!-- Our New Products section -->
+      <section id="fqnQuestionSec" class="text-center">
+
+          <hr class="my-8">
+
+          <h2 class="text-3xl font-bold mb-3">Clients Question</h2>
+          <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin.   </p>
+
+          <hr class="my-8">
+
+          <!-- Questions part -->
+          <div id="questionsContainer" style="border: 1px solid #231c1c77" class="flex sm:items-center sm:flex-row flex-col gap-4 p-4 rounded-lg text-left">
+                <img class="sm:w-2/5 w-full sm:h-96 h-56" src="./Images/11.png" alt="">
+                <div>
+     
+                     <div class="collapse collapse-plus bg-base-200">
+                         <input type="radio" name="my-accordion-3" checked="checked"/>
+                         <div class="collapse-title text-xl font-medium">Our Equipment</div>
+                         <div class="collapse-content">
+                           <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                         </div>
+                       </div>
+                      <hr  style="border-bottom: 2px solid #897f7f34;">
+                       <div class="collapse collapse-plus bg-base-200">
+                         <input type="radio" name="my-accordion-3" />
+                         <div class="collapse-title text-xl font-medium">Hockey Training</div>
+                         <div class="collapse-content">
+                           <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                         </div>
+                       </div>
+                      <hr  style="border-bottom: 2px solid #897f7f34;">
+                       <div class="collapse collapse-plus bg-base-200">
+                         <input type="radio" name="my-accordion-3" />
+                         <div class="collapse-title text-xl font-medium">Private Lessons</div>
+                         <div class="collapse-content">
+                              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                         </div>
+                       </div>
+                      <hr  style="border-bottom: 2px solid #897f7f34;">
+                       <div class="collapse collapse-plus bg-base-200">
+                         <input type="radio" name="my-accordion-3" />
+                         <div class="collapse-title text-xl font-medium">Ski Touring</div>
+                         <div class="collapse-content">
+                              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                         </div>
+                       </div>
+                      <hr  style="border-bottom: 2px solid #897f7f34;">
+                       <div class="collapse collapse-plus bg-base-200">
+                         <input type="radio" name="my-accordion-3" />
+                         <div class="collapse-title text-xl font-medium">Booking</div>
+                         <div class="collapse-content">
+                              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                         </div>
+                       </div>
+                       <hr style="border-bottom: 2px solid #897f7f34;">
+                       <div class="collapse collapse-plus bg-base-200">
+                         <input type="radio" name="my-accordion-3" />
+                         <div class="collapse-title text-xl font-medium">Pricings</div>
+                         <div class="collapse-content">
+                              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                         </div>
+                       </div>
+
+                </div>
+          </div>
+
+     </section>  
+
      <!-- DaisyUi js cdn -->
      <script src="https://cdn.tailwindcss.com"></script>
      <script src="./js/javascript.js"></script>
