--- a/index.html
+++ b/index.html
@@ -597,6 +597,51 @@
        </div>
 
     </section>
+  
+       <!-- Footer -->
+      <footer class="bg-black py-8 sm:px-6 text-white flex flex-col sm:flex-row gap-8 sm:gap-4 sm:h-[300px] justify-center items-center sm:text-left text-center px-6">
+         <div class="w-2/5">
+            <h2>Get In Touch</h2>
+            <p class="my-2">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <span> <i class="fa-solid fa-envelope text-red-500"></i> hockeys@support.com</span><br>
+            <span><i class="fa-solid fa-phone text-red-500"></i>(+62) 123-321-543</span>
+         </div>
+         <!-- TwoParts container -->
+     <div class="part-2-3-container w-2/5 grid grid-cols-2">
+            <!-- part two -->
+       <div>
+          <h2>Company</h2>
+           <ul>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Leadership</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#"> News & Article</a></li>
+            <li><a href="#"> Legal Notice</a></li>
+           </ul>
+       </div>
+       <!-- part three -->
+       <div>
+          <h2>Support</h2>
+           <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Ticket Support</a></li>
+            <li><a href="#"> Contact Us</a></li>
+           </ul>
+       </div>
+    </div>
+         <!-- part four -->
+         <div>
+            <h2>Services</h2>
+             <ul>
+              <li><a href="#">Academy</a></li>
+              <li><a href="#">Group Lesson</a></li>
+              <li><a href="#">Private Lesson</a></li>
+              <li><a href="#"> Hockeys for kids</a></li>
+              <li><a href="#"> Hockeys for Adult</a></li>
+             </ul>
+         </div>
+      </footer>
 
     <!-- DaisyUi js cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
