--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <!-- Banner Carousel -->
-    <section class="relative">
+    <section id="bannerCarouselSection" class="relative">
       <div id="bannerSlidesContainer">
         <div class="carousel w-full h-full">
           <div id="slide1" class="carousel-item relative w-full">
@@ -172,7 +172,7 @@
           style="
             background: linear-gradient(#0b01017a, #0b01017a),
               url('./Images/2.png');
-            background-size: 100% / 100%;
+            background-size: 100% / 100%;background-repeat: no-repeat;
           "
           class="p-5 pt-10 rounded-lg"
         >
@@ -189,7 +189,7 @@
             style="
               background: linear-gradient(#0b01017a, #0b01017a),
                 url('./Images/3.png');
-              background-size: 100% / 100%;
+              background-size: 100% / 100%;background-repeat: no-repeat;
             "
             class="p-5 pt-10 rounded-lg"
           >
@@ -210,7 +210,7 @@
           background: linear-gradient(#0b01017a, #0b01017a),
             url('./Images/4.png') no-repeat;
           background-size: 100% 100%;
-          border-radius: 0.5rem;
+          border-radius: 0.5rem;background-repeat: no-repeat;
         "
         class="h-[350px] text-left text-white my-4"
       >
@@ -559,7 +559,7 @@
         <!-- The part takes info -->
         <form class="w-full text-left p-4 rounded-lg" style="border: 1px solid #0000001a">
             <!-- first line with name and email -->
-             <div class="grid grid-cols-2 gap-4">
+              <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                 <div>
                     <label for="fname">Your Name</label><br>
                     <input type="text" id="fname" name="fname" placeholder="Enter your full name">
@@ -570,7 +570,7 @@
                  </div>
              </div>
              <!-- second line with subject and phone-number -->
-             <div class="grid grid-cols-2 gap-4 my-4">
+             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 my-4">
                 <div>
                     <label for="subject">Subject</label><br>
                     <input type="text" id="subject" name="subject" placeholder="Enter your subject">
