some problems have been solved

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       crossorigin="anonymous"
     ></script>
     <!-- Tailwind css and daisyCdn -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
+    
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -172,8 +174,7 @@
           style="
             background: linear-gradient(#0b01017a, #0b01017a),
               url('./Images/2.png');
-            background-size: 100% / 100%;background-repeat: no-repeat;
-          "
+            background-size: 100% 100%;background-repeat: no-repeat;"
           class="p-5 pt-10 rounded-lg"
         >
           <h2 class="font-semibold text-2xl">Junior Program</h2>
@@ -189,7 +190,7 @@
             style="
               background: linear-gradient(#0b01017a, #0b01017a),
                 url('./Images/3.png');
-              background-size: 100% / 100%;background-repeat: no-repeat;
+              background-size: 100% 100%;background-repeat: no-repeat;
             "
             class="p-5 pt-10 rounded-lg"
           >
